force-app/main/default/objects/animalos__Animal_Action_Plan__c/animalos__Animal_Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Animal Action Plan</label>
    <nameField>
        <displayFormat>AAP{00000}</displayFormat>
        <label>Animal Action Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>