force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/animalos__Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Plan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>animalos__Action_Plan__c</referenceTo>
    <relationshipLabel>Animal Action Plans</relationshipLabel>
    <relationshipName>Animal_Action_Plans</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>