force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/animalos__Next_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Next_Scheduled_Date__c</fullName>
    <label>Next Scheduled Date</label>
    <type>Date</type>
</CustomField>