force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/aos_Assessment__c.field-meta.xml
<CustomField>
    <fullName>aos_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>animalos__Assessment__c</referenceTo>
    <relationshipLabel>Animal Action Plans</relationshipLabel>
    <relationshipName>aos_Animal_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>