force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/aos_Frequency__c.field-meta.xml
<CustomField>
    <fullName>aos_Frequency__c</fullName>
    <formula>TEXT(animalos__Action_Plan__r.animalos__Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>