force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/aos_Frequency_Interval__c.field-meta.xml
<CustomField>
    <fullName>aos_Frequency_Interval__c</fullName>
    <formula>TEXT(animalos__Action_Plan__r.animalos__Frequency_Interval__c)</formula>
    <label>Frequency Interval</label>
    <type>Text</type>
</CustomField>