force-app/main/default/objects/animalos__Animal_Action_Plan__c/fields/aos_Specific_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Specific_Animal__c</fullName>
    <formula>animalos__Action_Plan__r.animalos__Specific_Animal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specific Animal</label>
    <type>Checkbox</type>
</CustomField>